# kgforge

./: .cursorignore  .envrc  .gitattributes  .gitignore  .gitmodules  .importlinter  .numpydoc  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  Automated Documentation Start.md  Automated-Documentation-Additional-Improvements.md  Best-in-class-navmap-implementation.md  CHANGELOG.md  CLEANUP_REPORT.md  DOCUMENTATION: best-for-AI-agents ruff.md  Doc_Strings_Instructions.md  FINAL_PROJECT_SUMMARY.md  LICENSE  Makefile  NAMESPACE_ALIGNMENT_SUMMARY.md  NavMap Updates.md  OPERATIONS.md  PHASE_1_COMPLETION_REPORT.md  PROJECT_COMPLETION_STATUS.md  README-AGENT.md  README-AUTOMATED-DOCUMENTATION.md  README.md  RELEASE_NOTES_PHASE6.md  ReadmeImprovementScope.md  SECURITY.md  SMOKE.txt  SymbolUpdateToBeActioned.md  TASK_1_4_PROGRESS.md  TYPING_GATES_IMPLEMENTATION_SUMMARY.md  UPGRADE.md  artifacts.deps.bak  baseline_typing_violations.txt  coderank.py  docstring_builder.toml  (+23 more)
.cache/: docstring_builder.json
.deprecated/outdated-codeintel/: cli.py  config.py  errors.py
.github/workflows/: ci-vulture.yml  ci.yml  codeintel.yml  refurb-ci.yml  retrieval-regression.yml  semgrep-ci.yml
.semgrep/: kgfoundry.yml
DEPRECATED-codeintel/: __init__.py  cli.py  observability.py
DEPRECATED-codeintel/docs/: TEST_MIGRATION.md
DEPRECATED-codeintel/index/: schema.sql
DEPRECATED-codeintel/mcp_server/: http_bridge.py  ratelimit.py  tools.py
DEPRECATED-codeintel/queries/: __init__.py
Document Output/: ast_nodes.jsonl  modules.jsonl  repo_map.json
Document Output/cst/: index.json
Document Output/enriched/: repo_map.json
_indices/bm25/: _0.fdm  _0.fdt  _0.fdx  _0.fnm  _0.nvd  _0.nvm  _0.si  _0_Lucene90_0.dvd  _0_Lucene90_0.dvm  _0_Lucene99_0.doc  _0_Lucene99_0.tim  _0_Lucene99_0.tip  _0_Lucene99_0.tmd  segments_1
artifacts/: manifest.json
artifacts/ast/: __init__.py.json  __main__.py.json  _faiss_stub.py.json  _inspection.py.json  _module_cache.py.json  _namespace_proxy.py.json  _operation_links.py.json  _utils.py.json  add_gpu_header.py.json  add_module_docstrings.py.json  alignment.py.json  api.py.json  app.py.json  apply.py.json  apply_postponed_annotations.py.json  architecture.py.json  artifacts.py.json  astroid_facade.py.json  augment_registry.py.json  auto_docstrings.py.json  autoapi_parser.py.json  base.py.json  blind_except_fix.py.json  bm25.py.json  bm25_index.py.json  bm25_manager.py.json  bootstrap.py.json  build_artifacts.py.json  build_graphs.py.json  build_navmap.py.json  build_symbol_index.py.json  build_test_map.py.json  builder_types.py.json  cache.py.json  calibration.py.json  canonicalizer.py.json  cast_chunker.py.json  catalog.py.json  check_docstrings.py.json  check_gpu_marks.py.json  (+325 more)
artifacts/imports/: pydeps.dot
artifacts/project/: files.txt  tree.txt
codeintel/: IMPLEMENTATION_PLAN.md  Makefile  __init__.py  build_languages.py  cli.py  cli_context.py  config.py
codeintel_rev/: CodeIntel MCP: Design Review and Improve.md  ErrorhandlingDraftimplementationplan  GPTProDataPlan2.md  GPTProDetailedDataPlan1.md  IMPLEMENTATION_REPORT.md  MetricsDetailedPRs.md  QUICKSTART.md  README.md  SCIP+Embedding.md  STATUS.md  SUCCESS.md  __init__.py  _lazy_imports.py  answerflow_pr.patch  cli_enrich.py  config_indexer.py  coverage_ingest.py  doc_health.py  errors.py  export_resolver.py  graph_builder.py  index.scip  module_utils.py  overlay_manager.py  polars_support.py  risk_hotspots.py  typedness.py  typing.py  uses_builder.py
config/: config.mock.yaml  config.yaml  nginx.conf  otel.example.env
docker/: catalogctl.Dockerfile
docs/: NETWORKING.md  Phase3_Observability.md  README_observability.md  __init__.py  agent_portal_readme.md  cli_context.py  conf.py  cst_data.md  enrich_pipeline.md  getting-started.md  index.md  indices.md  mcp.md  networking.md  numpy_docstring_guide.md  observability.md  runbook_tuning.md  sg_execution_times.rst  telemetry_phase0.md  telemetry_phase4.md  types_facade.py  typing_migration_guide.md  xtr.md
examples/: 00_quickstart.py  10_data_contracts_minimal.py  20_search_smoke.py  GALLERY_HEADER.rst  __init__.py  _utils.py  data_contracts_minimal.py  quickstart.py  run_report_sample.json  run_report_sample.md  search_smoke.py
openapi/: _augment_cli.yaml  codeintel-scope.yaml
openspec/: AGENTS.md
ops/: hypercorn.toml
outdated-codeintel/: COMPLETION.md  cli_context.py
proposals/: runtime_cells.md
requirements/: ci-docs.txt  ci-lint.txt  ci-test.txt
scripts/: bootstrap.sh  check_pyrefly_suppressions.py  queries.txt  run_api.sh  smoke_hardening.sh  test_tools_package.sh  xformers-whl-script.sh
site/: 404.html  conf.py  index.html  objects.inv
src/: __init__.py  sitecustomize.py
stubs/: README.md  conftest.pyi
tests/: __init__.py  bootstrap.py  conftest.py  test_ast_smoke.py  test_cli_context_modules.py  test_cli_runtime.py  test_config.py  test_cst_build.py  test_duckdb_catalog.py  test_e2e_smoke.py  test_imports.py  test_logging.py  test_logging_contexts.py  test_minimal_profile.py  test_namespace_proxy.py  test_networking_mounts.py  test_no_legacy_telemetry.py  test_regression_public_api_hardening.py  test_runtime_determinism.py  test_sitecustomize.py  test_streaming_through_proxy_headers.py  test_typing_facade.py
tools/: __init__.py  add_module_docstrings.py  architecture.py  audit_types_stubs.py  audit_types_stubs_deep.py  auto_docstrings.py  check_docstrings.py  check_imports.py  check_new_suppressions.py  check_stub_parity.py  cli_context_registry.py  demo_duckdb_ast.sql  detect_pkg.py  drift_preview.py  error_codes.py  find_missing_docstrings_all.py  gen_readmes.py  generate_docstrings.py  generate_pr_summary.py  generate_repo_intel.py  griffe_utils.py  make_importlinter.py  recall_harness.py  remove_unused_types_stubs.py  repo_scan.py  repo_scan_griffe.py  repo_scan_libcst.py  run_duckdb_demo.py  typer_to_openapi_cli.py  types_facade.py  types_stubs_deep_audit.json  types_stubs_removal_candidates.json  update_docs.sh  update_navmaps.py  validate_gallery.py
upstream_fixes/: pyserini-trectools-raw-sep.patch
(+4584 files in other folders)
